syntax = "proto3";

package fip.api.api;

service Api {
    rpc FindOne (ApiFindOneReq) returns (ApiRes);
}

message ApiFindOneReq {
    string id = 1;
}

message ApiRes {
    string id = 1;
}
